<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_most_popular"
        android:orderInCategory="1"
        android:title="@string/menu_most_popular"
        android:icon="@drawable/ic_popular_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_top_rated"
        android:orderInCategory="2"
        android:title="@string/menu_top_rated"
        android:icon="@drawable/ic_top_rated_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_favourites"
        android:orderInCategory="3"
        android:title="@string/menu_favourites"
        android:icon="@drawable/ic_star_filled"
        app:showAsAction="never" />
</menu>